# IrrlichtCMake

./: .gitignore  CMakeLists.txt
cmake/: FindMsgPack.cmake  README.md
src/: CMakeLists.txt  main.cpp
